@@ -1,3 +1,7 @@
+2006-06-01 (fabian):
+	- Complete rewrite from scratch based on PostgreSQL's module.  Works
+	  quite nice and doesn't segfault after each page-view any more.
+	  PHP5 only now.
 2004-06-21 (arjan):
 	- PEAR wrapper; examples in separate dir
 2004-06-01 (arjan):
